k8s/omeka-s-faq/mysql-stateful-set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: omeka-s-faq-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: omeka-s-faq-mysql
  serviceName: omeka-s-faq-mysql
  template:
    metadata:
      labels:
        app: omeka-s-faq-mysql
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.11.3
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: omeka-s-mysql-data
  volumeClaimTemplates:
    - metadata:
        name: omeka-s-mysql-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
        storageClassName: do-block-storage
