k8s/omeka-s-faq/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: omeka-s-faq-mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: omeka-s-faq-mysql
