k8s/omeka-s-faq/service.yml
apiVersion: v1
kind: Service
metadata:
  name: omeka-s-faq
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: omeka-s-faq
